<?xml version="1.0"?>
<package format="2">
  <name>rospy_util</name>
  <version>0.0.0</version>
  <description>The rospy_util package</description>
  <maintainer email="hiroebe@todo.todo">hiroebe</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rostopic</exec_depend>
</package>
